Version 0.3.1 - UNRELEASED
 * use multiple threads for some toolpath strategies
 * added an improved contour toolpath strategy (ContourFollow)
  * see http://fab.senselab.org/node/43
 * added options for conventional/climb milling
 * added automatic support grid positioning for contour models
 * allow to reverse the direction of a 2D contour model
 * beautification of the process name (via python-setproctitle)
 * Usability:
  * added optional "orthogonal" view (instead of perspective)
  * added a "recent files" item to the file menu
  * added the transparency (alpha) component to all configurable colors
  * pre-select output filenames of "Save as" dialogs based on the name of the model file

Version 0.3.0 - 2010-08-16
 * added support for importing contour paths from SVG files (requires Inkscape and pstoedit)
 * added basic support for importing simple DXF contour files
 * added support for engravings (along the lines of a contour model)
 * added a feature-complete commandline interface
 * integrated "help" links pointing to the wiki
 * improved OpenGL lighting (contributed by imyrek)
 * improved flexibility of the support grid layout:
  * allow non-square profiles for the support grid
  * added ability to create support grids with different x/y grid distance
  * added x/y offsets to support grid options
 * added 3D view movement and rotation with a keyboard in addition to the mouse
 * added optional support for the Psyco just-in-time compiler
 * information about the toolpath settings are stored as comments in GCode files
 * added a log window
 * switched default tool size from radius to diameter
 * improved progress bar responsiveness
 * fixed first movement in GCode: go up to safety height before moving to the side
 * fixed model orientation of STL files created by Art of Illusion
 * fixed performance issue when using a support grid
 * fixed empty toolpath after transforming the model
 * fixed various minor bugs of the toolpath generator