@@ -1,11 +1,13 @@
 Version 0.3.1 - UNRELEASED
- * use multiple threads for some toolpath strategies
+ * use multiple processes for some toolpath strategies
+  * this requires at least Python 2.6 or the "python-multiprocessing" package
  * added an improved contour toolpath strategy (ContourFollow)
   * see http://fab.senselab.org/node/43
  * added options for conventional/climb milling
  * added automatic support grid positioning for contour models
  * allow to reverse the direction of a 2D contour model
  * beautification of the process name (via python-setproctitle)
+ * added an experiemental remote-processing handler
  * Usability:
   * added optional "orthogonal" view (instead of perspective)
   * added a "recent files" item to the file menu
